# MNN

./: .gitignore  CMakeLists.txt  MNN.podspec
benchmark/: CMakeLists.txt
demo/exec/: CMakeLists.txt
express/: CMakeLists.txt  Expr.cpp  InsideExpr.cpp  MathOp.cpp  NeuralNetWorkOp.cpp  Optimizer.cpp  Solution.cpp  Utils.cpp
express/optimizer/: MergeOptimizer.cpp
include/MNN/expr/: Expr.hpp  InsideExpr.hpp  MathOp.hpp  NeuralNetWorkOp.hpp  Optimizer.hpp  Solution.hpp  Utils.hpp
include/MNN/expr/optimizer/: MergeOptimizer.hpp
project/android/: updateTest.sh
project/ios/MNN.xcodeproj/: project.pbxproj
schema/current/: CaffeOp_generated.h  GpuLibrary_generated.h  MNN_generated.h  TFQuantizeOp_generated.h  Tensor_generated.h  TensorflowOp_generated.h
schema/default/: MNN.fbs  TensorflowOp.fbs
source/backend/arm82/: CMakeLists.txt
source/backend/cpu/: CPUArgMax.cpp  CPUArgMax.hpp  CPUBackend.cpp  CPUBinary.cpp  CPUCast.cpp  CPUConv2DBackPropFilter.cpp  CPUConvolution3D.cpp  CPUConvolutionDepthwise.cpp  CPUDeconvolution.cpp  CPUDeconvolutionDepthwise.cpp  CPUElu.cpp  CPUElu.hpp  CPUInstanceNorm.cpp  CPUMatMul.cpp  CPUOPRegister.cpp  CPUPadding.cpp  CPUPool.cpp  CPUReduction.cpp  CPUTensorConvert.cpp  CPUTensorConvert.hpp  CPUUnary.cpp
source/backend/cpu/compute/: CommonOptFunction.cpp  ConvOpt.cpp  Convolution3x3.hpp  ConvolutionFloatFactory.cpp  ConvolutionGroup.cpp  ConvolutionTiledExecutor.cpp
source/backend/cpu/x86_x64/: CMakeLists.txt
source/backend/metal/: CMakeLists.txt  MetalBackend.mm
source/backend/opencl/: CMakeLists.txt
source/backend/opengl/: AllShader.cpp  CMakeLists.txt  GLBackend.cpp  makeshader.py
source/backend/opengl/shaders/: AllShader.h
source/backend/vulkan/: CMakeLists.txt
source/core/: MNNMemoryUtils.c  Pipeline.cpp  SizeComputer.cpp
source/shape/: ShapeArgMax.cpp  ShapeBinaryOp.cpp  ShapeConcat.cpp  ShapeConvolution.cpp  ShapePriorbox.cpp  ShapeRegister.cpp  ShapeStridedSlice.cpp  ShapeTensorConvert.cpp
test/: CMakeLists.txt
test/core/: ScheduleTest.cpp
test/expr/: MatMulTest.cpp
test/op/: ArgMaxTest.cpp  BatchToSpaceNDTest.cpp  BinaryOPTest.cpp  GatherTest.cpp  MatMulTest.cpp  PackTest.cpp  RangeTest.cpp  RankTest.cpp  SeLUTest.cpp  SpaceToBatchNDTest.cpp  UnaryTest.cpp
test/speed/: BinarySpeedTest.cpp
tools/converter/: CMakeLists.txt
tools/converter/source/: cli.cpp  config.hpp
tools/converter/source/onnx/: PoolingOnnx.cpp
tools/converter/source/optimizer/: PostConverter.cpp  TemplateMerge.cpp
tools/converter/source/optimizer/merge/: ConvBiasAdd.cpp  SliceTFMerge.cpp
tools/converter/source/optimizer/onnxextra/: OnnxExtraManager.cpp  OnnxSlice.cpp
tools/converter/source/optimizer/postconvert/: AddTensorFormatConverter.cpp
tools/converter/source/optimizer/tfextra/: TFArgMaxMerge.cpp  TFConvolutionMerge.cpp  TFExtraManager.cpp
tools/cpp/: CMakeLists.txt
tools/evaluation/: CMakeLists.txt
tools/quantization/: CMakeLists.txt
tools/train/: CMakeLists.txt
tools/train/source/data/: StackTransform.hpp
tools/train/source/exec/: dataTransformer.cpp  rawDataTransform.cpp  train.cpp  transformer.cpp
tools/train/source/transform/: BinaryGrad.cpp  ConvGrad.cpp  ConvolutionConverter.cpp  MatMulGrad.cpp  OpConverter.cpp  OpConverter.hpp  OpGrad.hpp  PoolGrad.cpp  ReduceGrad.cpp  ReluGrad.cpp  ReshapeGrad.cpp  SelectGrad.cpp  SoftmaxGrad.cpp  TensorConvertGrad.cpp  UnaryGrad.cpp
