IF(MNN_BUILD_TRAIN)
  file(GLOB TRANSFORM_SRC ${CMAKE_CURRENT_LIST_DIR}/source/transform/*.cpp)
  file(GLOB OPERATOR_SRC ${CMAKE_CURRENT_LIST_DIR}/source/operator/*.cpp)
  add_library(transforms ${TRANSFORM_SRC})
  add_executable(train.out ${CMAKE_CURRENT_LIST_DIR}/source/exec/train.cpp)
  add_executable(rawDataTransform.out ${CMAKE_CURRENT_LIST_DIR}/source/exec/rawDataTransform.cpp)
  add_dependencies(rawDataTransform.out MNN_SCHEMA_GEN)
  add_dependencies(train.out MNN_SCHEMA_GEN)
  add_dependencies(transforms MNN_SCHEMA_GEN)
  if(CMAKE_SYSTEM_NAME MATCHES "^Android")
    target_link_libraries(rawDataTransform.out log android m)
  endif()
  add_executable(dataTransformer.out ${CMAKE_CURRENT_LIST_DIR}/source/exec/dataTransformer.cpp)
  add_dependencies(dataTransformer.out MNN_SCHEMA_GEN)
  add_executable(transformer.out ${CMAKE_CURRENT_LIST_DIR}/source/exec/transformer.cpp)
  add_dependencies(transformer.out MNN_SCHEMA_GEN)

  target_link_libraries(transformer.out transforms MNN)
  target_include_directories(transformer.out PRIVATE ${CMAKE_CURRENT_LIST_DIR}/source/transform/)
  target_link_libraries(dataTransformer.out MNN)
  target_link_libraries(train.out MNN)
ENDIF()
